<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">الأطفال الأذكياء</string>
    <string name="debug">regular</string>
    <string name="app_id">ca-app-pub-7642876235955304~7200615825</string>
    <string name="add_unit_banner">ca-app-pub-7642876235955304/5823954977</string>
    <string name="add_unit_video">ca-app-pub-7642876235955304/7184411751</string>
    <string name="rating">تقييم</string>
    <string name="soundOnText">تفعيل الصوت</string>
    <string name="soundOffText">كتم</string>
    <string name="level1">مبتدأ</string>
    <string name="level2">سهل</string>
    <string name="level3">متوسط</string>
    <string name="level4">صعب</string>
    <string name="level5">صعب جدا</string>
    <string name="level6">محترف</string>
    <string name="best_score_initial">أفضل توقيت: -</string>
    <string name="best_score">أفضل توقيت:</string>
    <string name="score">النقاط</string>
    <string name="time">التوقيت:</string>

</resources>
